--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -6,6 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Come in & Taste</h1>
-    <p>Ask: css other than site.css</p>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">more info</a>.</p>
 </div>
