Image fix for Plesk

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -6,8 +6,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Come in & Taste</h1>
-    <img src="img/Gym-Kitchen-Branding-Logo.png" alt="Gym kitchen logo" width="1400" height="900">
+    <img src="@Url.Content("~/img/Gym-Kitchen-Branding-Logo.png")" alt="Gym kitchen logo" width="1400" height="900">
 </div>
+<p>TESTING REPUBLISHING</p>
 <h1></h1> <!-- Remove these -->
 <div></div>
 <div></div>
@@ -15,7 +16,7 @@
 <div>
     <!-- Add class and styling -->
     <h2>Crispy Shredded Chicken</h2>
-    <img src="img/Crispy-Chilli-Chicken.jpeg" alt="Crispy chilli chicken on a plate" width="700" height="500">
+    <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" width="700" height="500">
     <p>Try this takeaway favourite served with rice, or simply on its own as part of a buffet-style meal. 
         It can work as a main course or starter to share. 
         Crispy fried shredded chicken and crunchy vegetables tossed with very light sweet, sour and savoury seasoning sauce. 
