Navigation Bar Update 2

--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@page
+
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     @model IndexModel
     @{
@@ -33,3 +37,5 @@
     </div>
 
 </body>
+
+</html>
