--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -1,8 +1,20 @@
 ﻿@page
-@model Web_App.Pages.ContactModel
-@{
-    ViewData["Title"] = "Contact Us";
-}
-<h1>@ViewData["Title"]</h1>
 
-<p>Contact information here...</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    @model Web_App.Pages.ContactModel
+    @{
+        ViewData["Title"] = "Contact Us";
+    }
+</head>
+
+<body>
+
+    <h1>@ViewData["Title"]</h1>
+    <p>Contact information here...</p>
+
+</body>
+
+</html>>
