--- a/Web App/Pages/Error.cshtml
+++ b/Web App/Pages/Error.cshtml
@@ -1,8 +1,16 @@
 ﻿@page
-@model ErrorModel
-@{
-    ViewData["Title"] = "Error";
-}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    @model ErrorModel
+    @{
+        ViewData["Title"] = "Error";
+    }
+</head>
+
+<body>
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
@@ -24,3 +32,7 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+
+</body>
+
+</html>
