--- a/Web App/Pages/Menu.cshtml
+++ b/Web App/Pages/Menu.cshtml
@@ -1,8 +1,20 @@
 ﻿@page
-@model Web_App.Pages.MenuModel
-@{
-    ViewData["Title"] = "Menu";
-}
-<h1>@ViewData["Title"]</h1>
 
-<p>See the whole menu information here...</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    @model Web_App.Pages.MenuModel
+    @{
+        ViewData["Title"] = "Menu";
+    }
+</head>
+
+<body>
+
+    <h1>@ViewData["Title"]</h1>
+    <p>See the whole menu information here...</p>
+
+</body>
+
+</html>
