--- a/Web App/Pages/Privacy.cshtml
+++ b/Web App/Pages/Privacy.cshtml
@@ -1,8 +1,20 @@
 ﻿@page
-@model PrivacyModel
-@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    @model PrivacyModel
+    @{
+        ViewData["Title"] = "Privacy Policy";
+    }
+</head>
+
+<body>
+
+    <h1>@ViewData["Title"]</h1>
+    <p>Use this page to detail your site's privacy policy.</p>
+
+</body>
+
+|</html>
