--- a/Web App/wwwroot/css/site.css
+++ b/Web App/wwwroot/css/site.css
@@ -2,37 +2,45 @@ html {
     font-size: 14px;
     position: relative;
     min-height: 100%;
-    margin-left: 0;
-    padding-left: 0;
+    margin-left: 0px;
+    padding-left: 0px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
-
+/* Main content formatting */
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    margin-left: 0px;
+    padding-left: 0px;
 }
-
 
 /* Navigation bar concepts gathered from W3Schools */
-/* Class for the navigation bar rectangle */
+/* Class to format for the navigation bar rectangle */
 .navbar {
-    background-color: grey;
+    background-color: black;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 20;
     border-radius: 7px;
-    margin-left: 5px;
 }
 
-/* Changes colour of the navigation bar item when hovered over the inactive pages, code adapted from W3Schools */
+/* Individual item/block of the navigation bar */
+.nav-link {
+    border-radius: 7px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+}
+
+/* Alters the color of the navigation bar item when it is hovered over, code adapted from W3Schools */
 .navbar a:hover:not(.active) {
-    background-color: #ffcc00;
+    background-color: #ffae00;
     font-weight: 500;
     border-radius: 7px;
 }
@@ -42,7 +50,7 @@ body {
     margin-top: 60px;
 }
 
-/* Formatting for the logo picture */
+/* Formatting for the logo picture *** implement a logo */
 .logo-pic-formatting {
     width: 100%;
     height: 100%;
