--- a/Web App/Pages/Index.cshtml
+++ b/Web App/Pages/Index.cshtml
@@ -14,13 +14,13 @@
 
     <div class="text-center">
         <h1 class="display-4">Come in & Taste</h1>
-        <img src="@Url.Content("~/img/Gym-Kitchen-Branding-Logo.png")" alt="Gym kitchen logo" class="logo-pic-formatting">
+        <img src="@Url.Content("~/img/Gym-Kitchen-Branding-Logo.png")" alt="Gym kitchen logo" class="responsive-picture">
     </div>
 
     <div>
         <!-- Add class and styling -->
         <h2>Crispy Shredded Chicken</h2>
-        <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" width="700" height="500">
+        <img src="@Url.Content("~/img/Crispy-Chilli-Chicken.jpeg")" alt="Crispy chilli chicken on a plate" class="responsive-picture">
         <p>
             Give this popular takeout dish a try with a side of rice or savor it on its own as a part of a buffet-style meal. 
             Whether you're looking for a main course or a shareable starter, this dish fits the bill perfectly. 
@@ -32,6 +32,9 @@
             Learn more about this dish <a href="https://www.bbcgoodfood.com/recipes/crispy-shredded-chicken">here</a>.</p>
         <p>Image <a href="https://mymorningmocha.com/crispy-chilli-chicken/">reference</a>.</p>
     
+        <!-- Fullscreen image on homepage -->
+        <!-- Title formatting -->
+        <!-- Grid layout -->
         <!-- Ask: css other than site.css & layout styling html + css? - Remove this -->
 
     </div>
