--- a/Web App/wwwroot/css/site.css
+++ b/Web App/wwwroot/css/site.css
@@ -55,7 +55,7 @@ body {
 }
 
 /* Formatting for the logo picture *** implement a logo */
-.logo-pic-formatting {
+.responsive-picture {
     width: 100%;
     height: 100%;
     position: relative;
