--- a/Web App/Pages/Privacy.cshtml
+++ b/Web App/Pages/Privacy.cshtml
@@ -12,8 +12,10 @@
 
 <body>
 
-    <h1>@ViewData["Title"]</h1>
-    <p>Use this page to detail your site's privacy policy.</p>
+    <div class="content-spacing">
+        <h1>@ViewData["Title"]</h1>
+        <p>Use this page to detail your site's privacy policy.</p>
+    </div>
 
 </body>
 
