--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
         </main>
     </div>
 
+        <!-- Footer -->
         <footer class="bg-dark text-center text-white round-corner-top">
         
             <!-- Grid container -->
@@ -56,17 +57,17 @@
                 <!-- Section: Social media -->
                 <section class="mb-4">
                     <!-- Facebook -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://en-gb.facebook.com/" role="button" target="_blank"><i class="fa fa-facebook"></i></a>
                     <!-- Twitter -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/?lang=en-GB/" role="button" target="_blank"><i class="fa fa-twitter"></i></a>
                     <!-- Google -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fa fa-google"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.google.co.uk/" role="button" target="_blank"><i class="fa fa-google"></i></a>
                     <!-- Instagram -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button" target="_blank"><i class="fa fa-instagram"></i></a>
                     <!-- Linkedin -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fa fa-linkedin"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://uk.linkedin.com/" role="button" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <!-- Github -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/iAdam368?tab=repositories" role="button" target="_blank"><i class="fa fa-github"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/iAdam368?tab=repositories/" role="button" target="_blank"><i class="fa fa-github"></i></a>
                 </section>
                 <!-- Section: Social media -->
             </div>
@@ -79,6 +80,7 @@
             <!-- Copyright -->
 
         </footer>
+        <!-- Footer -->
         
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
