--- a/Web App/Pages/Contact.cshtml
+++ b/Web App/Pages/Contact.cshtml
@@ -12,8 +12,10 @@
 
 <body>
 
-    <h1>@ViewData["Title"]</h1>
-    <p>Contact information here...</p>
+    <div class="content-spacing">
+        <h1>@ViewData["Title"]</h1>
+        <p>Contact information here...</p>
+    </div>
 
 </body>
 
