--- a/Web App/Pages/Menu/Create.cshtml
+++ b/Web App/Pages/Menu/Create.cshtml
@@ -7,46 +7,46 @@
 
 <h1>Create</h1>
 
-<h4>FoodItems</h4>
+<h4>FoodItem</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FoodItems.FoodName" class="control-label"></label>
-                <input asp-for="FoodItems.FoodName" class="form-control" />
-                <span asp-validation-for="FoodItems.FoodName" class="text-danger"></span>
+                <label asp-for="FoodItem.FoodName" class="control-label"></label>
+                <input asp-for="FoodItem.FoodName" class="form-control" />
+                <span asp-validation-for="FoodItem.FoodName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FoodItems.FoodDescription" class="control-label"></label>
-                <input asp-for="FoodItems.FoodDescription" class="form-control" />
-                <span asp-validation-for="FoodItems.FoodDescription" class="text-danger"></span>
+                <label asp-for="FoodItem.FoodDescription" class="control-label"></label>
+                <input asp-for="FoodItem.FoodDescription" class="form-control" />
+                <span asp-validation-for="FoodItem.FoodDescription" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FoodItems.CategoryOfFood" class="control-label"></label>
-                <input asp-for="FoodItems.CategoryOfFood" class="form-control" />
-                <span asp-validation-for="FoodItems.CategoryOfFood" class="text-danger"></span>
+                <label asp-for="FoodItem.CategoryOfFood" class="control-label"></label>
+                <input asp-for="FoodItem.CategoryOfFood" class="form-control" />
+                <span asp-validation-for="FoodItem.CategoryOfFood" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FoodItems.Specification" class="control-label"></label>
-                <input asp-for="FoodItems.Specification" class="form-control" />
-                <span asp-validation-for="FoodItems.Specification" class="text-danger"></span>
+                <label asp-for="FoodItem.Specification" class="control-label"></label>
+                <input asp-for="FoodItem.Specification" class="form-control" />
+                <span asp-validation-for="FoodItem.Specification" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FoodItems.IsAvailable" class="control-label"></label>
-                <input asp-for="FoodItems.IsAvailable" class="form-control" />
-                <span asp-validation-for="FoodItems.IsAvailable" class="text-danger"></span>
+                <label asp-for="FoodItem.IsAvailable" class="control-label"></label>
+                <input asp-for="FoodItem.IsAvailable" class="form-control" />
+                <span asp-validation-for="FoodItem.IsAvailable" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FoodItems.Price" class="control-label"></label>
-                <input asp-for="FoodItems.Price" class="form-control" />
-                <span asp-validation-for="FoodItems.Price" class="text-danger"></span>
+                <label asp-for="FoodItem.Price" class="control-label"></label>
+                <input asp-for="FoodItem.Price" class="form-control" />
+                <span asp-validation-for="FoodItem.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FoodItems.ImagePath" class="control-label"></label>
-                <input asp-for="FoodItems.ImagePath" class="form-control" />
-                <span asp-validation-for="FoodItems.ImagePath" class="text-danger"></span>
+                <label asp-for="FoodItem.ImagePath" class="control-label"></label>
+                <input asp-for="FoodItem.ImagePath" class="form-control" />
+                <span asp-validation-for="FoodItem.ImagePath" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
