--- a/Web App/Pages/Menu/Details.cshtml
+++ b/Web App/Pages/Menu/Details.cshtml
@@ -8,54 +8,54 @@
 <h1>Details</h1>
 
 <div>
-    <h4>FoodItems</h4>
+    <h4>FoodItem</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItems.FoodName)
+            @Html.DisplayNameFor(model => model.FoodItem.FoodName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItems.FoodName)
+            @Html.DisplayFor(model => model.FoodItem.FoodName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItems.FoodDescription)
+            @Html.DisplayNameFor(model => model.FoodItem.FoodDescription)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItems.FoodDescription)
+            @Html.DisplayFor(model => model.FoodItem.FoodDescription)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItems.CategoryOfFood)
+            @Html.DisplayNameFor(model => model.FoodItem.CategoryOfFood)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItems.CategoryOfFood)
+            @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItems.Specification)
+            @Html.DisplayNameFor(model => model.FoodItem.Specification)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItems.Specification)
+            @Html.DisplayFor(model => model.FoodItem.Specification)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItems.IsAvailable)
+            @Html.DisplayNameFor(model => model.FoodItem.IsAvailable)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItems.IsAvailable)
+            @Html.DisplayFor(model => model.FoodItem.IsAvailable)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItems.Price)
+            @Html.DisplayNameFor(model => model.FoodItem.Price)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItems.Price)
+            @Html.DisplayFor(model => model.FoodItem.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItems.ImagePath)
+            @Html.DisplayNameFor(model => model.FoodItem.ImagePath)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItems.ImagePath)
+            @Html.DisplayFor(model => model.FoodItem.ImagePath)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.FoodItems?.FoodID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.FoodItem?.FoodID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
