--- a/Web App/Pages/Menu/Details.cshtml
+++ b/Web App/Pages/Menu/Details.cshtml
@@ -5,10 +5,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Menu Item Details</h1>
 
 <div>
-    <h4>FoodItem</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
