--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                                 <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-page="/Menu">Menu</a>
+                                <a class="nav-link text-light" asp-area="" asp-page="/Menu/Index">Menu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-page="/Contact">Contact</a>
