Navigation Bar Update 4

--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -28,13 +28,16 @@
                                 <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-page="/Menu/Index">Menu</a>
+                                <a class="nav-link text-light" asp-area="" asp-page="/MenuPage">Menu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-page="/Contact">Contact</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-warning" asp-area="" asp-page="/Menu/Index">Edit Menu</a>
                             </li>
                         </ul>
                     </div>
