--- a/Web App/Pages/Shared/_Layout.cshtml
+++ b/Web App/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-warning" asp-area="" asp-page="/Menu/Index">Edit Menu</a>
+                                <a class="nav-link text-danger" asp-area="" asp-page="/Admin">Admin</a>
                             </li>
                         </ul>
                     </div>
