Menu Page and Folder Rename/Restructure

--- a/Web App/Pages/Admin.cshtml
+++ b/Web App/Pages/Admin.cshtml
@@ -18,8 +18,8 @@
 
         <h4>Menu Options</h4>
         <ul>
-            <li> <a asp-page="/Menu/Index">View, Edit & Delete Dishes</a> </li>
-            <li> <a asp-page="/Menu/Create">Add a New Dish</a> </li>
+            <li> <a asp-page="/MenuModify/Index">View, Edit & Delete Dishes</a> </li>
+            <li> <a asp-page="/MenuModify/Create">Add a New Dish</a> </li>
         </ul>
 
     </div>
