Menu CRUD Page Table Title Update

--- a/Web App/Pages/MenuModify/Index.cshtml
+++ b/Web App/Pages/MenuModify/Index.cshtml
@@ -24,25 +24,25 @@
             <thead>
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.FoodItem[0].FoodName)
+                        Food Name
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.FoodItem[0].FoodDescription)
+                        Food Description
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.FoodItem[0].CategoryOfFood)
+                        Category of Food
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.FoodItem[0].Specification)
+                        Specification
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.FoodItem[0].IsAvailable)
+                        Available?
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.FoodItem[0].Price)
+                        Price
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.FoodItem[0].ImagePath)
+                        Image File Path
                     </th>
                     <th></th>
                 </tr>
