--- a/Web App/Pages/MenuModify/Create.cshtml
+++ b/Web App/Pages/MenuModify/Create.cshtml
@@ -23,7 +23,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FoodItem.FoodName" class="control-label"></label>
+                <label asp-for="FoodItem.FoodName" class="control-label" name="Food Item"></label>
                 <input asp-for="FoodItem.FoodName" class="form-control" />
                 <span asp-validation-for="FoodItem.FoodName" class="text-danger"></span>
             </div>
