--- a/Web App/Pages/MenuModify/Delete.cshtml
+++ b/Web App/Pages/MenuModify/Delete.cshtml
@@ -19,49 +19,49 @@
             <hr />
             <dl class="row">
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.FoodName)
+                    Food Name
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.FoodName)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.FoodDescription)
+                    Food Description
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.FoodDescription)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.CategoryOfFood)
+                    Category of Food
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.Specification)
+                    Specification
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.Specification)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.IsAvailable)
+                    Available?
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.IsAvailable)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.Price)
+                    Price
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.Price)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.ImagePath)
+                    Image File Path
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.ImagePath)
                 </dd>
             </dl>
-    
+
             <form method="post">
                 <input type="hidden" asp-for="FoodItem.FoodID" />
                 <input type="submit" value="Delete" class="btn btn-danger" /> |
