--- a/Web App/Pages/MenuModify/Details.cshtml
+++ b/Web App/Pages/MenuModify/Details.cshtml
@@ -20,43 +20,43 @@
             <hr />
             <dl class="row">
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.FoodName)
+                    Food Name
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.FoodName)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.FoodDescription)
+                    Food Description
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.FoodDescription)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.CategoryOfFood)
+                    Category of Food
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.CategoryOfFood)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.Specification)
+                    Specificaton
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.Specification)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.IsAvailable)
+                    Available?
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.IsAvailable)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.Price)
+                    Price
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.Price)
                 </dd>
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FoodItem.ImagePath)
+                    Image File Path
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.FoodItem.ImagePath)
