--- a/Web App/Pages/MenuModify/Index.cshtml
+++ b/Web App/Pages/MenuModify/Index.cshtml
@@ -17,8 +17,15 @@
         <h1>Menu Items List</h1>
 
         <p>
-            <a asp-page="Create">Create New</a>
+            <div>
+                <input type="submit" value="Create New Dish" class="btn btn-primary" />
+            </div>
+            <div class="btn btn-primary text-white">
+            <a asp-page="Create">Create New Dish</a>
+            </div>
         </p>
+
+
 
         <table class="table">
             <thead>
