Menu CRUD Page Buttons Update

--- a/Web App/Pages/MenuModify/Index.cshtml
+++ b/Web App/Pages/MenuModify/Index.cshtml
@@ -17,15 +17,12 @@
         <h1>Menu Items List</h1>
 
         <p>
+
             <div>
-                <input type="submit" value="Create New Dish" class="btn btn-primary" />
+                <a class="btn btn-primary" asp-page="Create">Create New Dish</a>
             </div>
-            <div class="btn btn-primary text-white">
-            <a asp-page="Create">Create New Dish</a>
-            </div>
+
         </p>
-
-
 
         <table class="table">
             <thead>
