--- a/Web App/Pages/MenuModify/Delete.cshtml
+++ b/Web App/Pages/MenuModify/Delete.cshtml
@@ -64,9 +64,14 @@
 
             <form method="post">
                 <input type="hidden" asp-for="FoodItem.FoodID" />
-                <input type="submit" value="Delete" class="btn btn-danger" /> |
-                <a asp-page="./Index">Back to List</a>
+                <input type="submit" value="Delete" class="btn btn-danger" />
             </form>
+
+            <p>
+                <div>
+                    <a asp-page="./Index">Back to List</a>
+                </div>
+            </p>
         </div>
 
     </div>
