--- a/Web App/Pages/MenuModify/Delete.cshtml
+++ b/Web App/Pages/MenuModify/Delete.cshtml
@@ -58,7 +58,7 @@
                     Image File Path
                 </dt>
                 <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FoodItem.ImagePath)
+                    @Html.DisplayFor(model => model.FoodItem.ImageDescription)
                 </dd>
             </dl>
 
