--- a/Web App/Pages/MenuModify/Edit.cshtml
+++ b/Web App/Pages/MenuModify/Edit.cshtml
@@ -53,9 +53,9 @@
                         <span asp-validation-for="FoodItem.Price" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="FoodItem.ImagePath" class="control-label"></label>
-                        <input asp-for="FoodItem.ImagePath" class="form-control" />
-                        <span asp-validation-for="FoodItem.ImagePath" class="text-danger"></span>
+                        <label asp-for="FoodItem.ImageDescription" class="control-label"></label>
+                        <input asp-for="FoodItem.ImageDescription" class="form-control" />
+                        <span asp-validation-for="FoodItem.ImageDescription" class="text-danger"></span>
                     </div>
                     <p>
                         <div class="form-group">
