--- a/Web App/Pages/MenuModify/Index.cshtml
+++ b/Web App/Pages/MenuModify/Index.cshtml
@@ -73,7 +73,7 @@
                         @Html.DisplayFor(modelItem => item.Price)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ImagePath)
+                        @Html.DisplayFor(modelItem => item.ImageDescription)
                     </td>
                     <td>
                         <a asp-page="./Edit" asp-route-id="@item.FoodID">Edit</a> |
